force-app/main/default/objects/Product_Pricing_Tier__mdt/Product_Pricing_Tier__mdt.object-meta.xml
<CustomObject>
    <description>Consolidated attribute-based product pricing. Replaces Product_Attribute_Variant__mdt (site-specific USD) and kVA_Draw_Pricing__mdt (generic multi-currency). One record per product + attribute + site + currency combination. Lookup priority: site-specific → product-specific → generic.</description>
    <label>Product Pricing Tier</label>
    <pluralLabel>Product Pricing Tiers</pluralLabel>
</CustomObject>