force-app/main/default/objects/Product_Pricing_Tier__mdt/fields/Attribute_Value__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Value__c</fullName>
    <label>Attribute Value</label>
    <length>40</length>
    <type>Text</type>
</CustomField>