force-app/main/default/objects/Product_Pricing_Tier__mdt/fields/Odoo_Combo_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Combo_ID__c</fullName>
    <label>Odoo Combo ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>