force-app/main/default/objects/Product_Pricing_Tier__mdt/fields/Site_Code__c.field-meta.xml
<CustomField>
    <fullName>Site_Code__c</fullName>
    <label>Site Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>